Hashage du mot de passe + Changement de noms de variables

--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -11,7 +11,6 @@
   <h2>{{ reciepe.titre }}</h2>
   <p>{{ reciepe.description }}</p>
 
-  <ion-item>
             <ion-list lines="none">
               <ion-item>35 min.</ion-item>
               <ion-item>Préparation</ion-item>
@@ -22,35 +21,10 @@
               <ion-item>1616</ion-item>
               <ion-item>Difficulté</ion-item>
             </ion-list>
-  </ion-item>
 
 
 
-<!--  <div>-->
-<!--    <div *ngFor="let reciepe of reciepes">-->
-<!--      <img class="post_img" src="{{ reciepe.photo }}">-->
-<!--      <ion-item lines="none">-->
-<!--        <h2>{{ reciepe.title }}</h2>-->
-<!--      </ion-item>-->
-<!--      <ion-item>-->
-<!--        <p>{{ reciepe.subtitle }}</p>-->
-<!--      </ion-item>-->
-<!--      <ion-item style="display: flex">-->
-<!--        <ion-list lines="none">-->
-<!--          <ion-item>{{ reciepe.time }}</ion-item>-->
-<!--          <ion-item>{{ reciepe.preparation }}</ion-item>-->
-<!--          <ion-item>{{ reciepe.preparation }}</ion-item>-->
-<!--        </ion-list>-->
-<!--        <ion-list lines="none">-->
-<!--          <ion-item>{{ reciepe.time }}</ion-item>-->
-<!--          <ion-item>{{ reciepe.calories }}</ion-item>-->
-<!--          <ion-item>{{ reciepe.level }}</ion-item>-->
-<!--        </ion-list>-->
-<!--      </ion-item>-->
-<!--      <ion-item>-->
-<!--        <p>{{ reciepe.description }}</p>-->
-<!--      </ion-item>-->
-<!--    </div>-->
-<!--  </div>-->
+    <ion-button color="danger" expand="block" shape="round">Voulez-vous commander ce plat ?</ion-button>
+
 </ion-content>
 </div>
