--- a/src/app/splash/splash.page.html
+++ b/src/app/splash/splash.page.html
@@ -1,5 +1,5 @@
 <ion-content>
   <div class="container ion-text-center">
-    <img src="assets/top-chef-logo.png">
+    <img src="assets/ImitChef_Logo_with_smoke.png">
   </div>
 </ion-content>
