--- a/src/app/splash/splash.page.scss
+++ b/src/app/splash/splash.page.scss
@@ -1,13 +1,13 @@
 ion-content{
-  --background:#F5B920;
+  --background:#FF6859;
 }
 
 @-webkit-keyframes slide-top{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-100px);transform:translateY(-100px)}}@keyframes slide-top{0%{-webkit-transform:translateY(0);transform:translateY(0)}100%{-webkit-transform:translateY(-100px);transform:translateY(-100px)}}
 .container{
   -webkit-animation:slide-top .6s cubic-bezier(.25,.46,.45,.94) both;animation:slide-top .6s cubic-bezier(.25,.46,.45,.94) both;
   img{
-    height: 100px;
-    margin-top: 400px;
+    height: 500px;
+    margin-top: 50%;
   }
 }
 
