Affichage des ingrédients

--- a/src/app/welcome_page/welcome.page.html
+++ b/src/app/welcome_page/welcome.page.html
@@ -3,7 +3,7 @@
         <div class="block-home-page">
             <h2 class="font-home-page-title">Bienvenue sur</h2>
             <div class="title">
-                <img src="assets/logo.png" class="img-title">
+                <img src="assets/ic-log.png" class="img-title">
             </div>
 
             <h2 class="description">
