--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -1,30 +1,24 @@
 <div *ngIf="reciepe">
-  <ion-header>
-    <ion-toolbar>
-      <ion-back-button color="warning" slot="start"></ion-back-button>
-      <img class="post_img" src="{{ reciepe.image }}">
-    </ion-toolbar>
-  </ion-header>
 
-<ion-content>
+  <img class="post_img" src="{{ reciepe.image }}">
+    <div class="block-description">
+        <h2>{{ reciepe.titre }}</h2>
+        <p>{{ reciepe.description }}</p>
+    </div>
 
-  <h2>{{ reciepe.titre }}</h2>
-  <p>{{ reciepe.description }}</p>
+    <hr>
 
-            <ion-list lines="none">
-              <ion-item>35 min.</ion-item>
-              <ion-item>Préparation</ion-item>
-              <ion-item>Temps de cuisson</ion-item>
-            </ion-list>
-            <ion-list lines="none">
-              <ion-item>90 min.</ion-item>
-              <ion-item>1616</ion-item>
-              <ion-item>Difficulté</ion-item>
-            </ion-list>
+    <ion-list lines="none">
+      <ion-item>Temps de cuisson : {{ reciepe.time_cooking}} min.</ion-item>
+      <ion-item>Difficulté : {{ reciepe.difficulty}}</ion-item>
+      <ion-item>Matériel nécessaire : </ion-item>
+      <ion-item *ngFor="let ingredient of reciepe.Ingredients">Ingrédients :
+          {{ingredient.poultry}}
+          {{ingredient.peper}}
+      </ion-item>
+    </ion-list>
+
+    <div color="danger" expand="block" shape="round" class="command-restaurant" (click)="displayPlate()">Voulez-vous commander ce plat ?</div>
 
 
-
-    <ion-button color="danger" expand="block" shape="round">Voulez-vous commander ce plat ?</ion-button>
-
-</ion-content>
 </div>
