--- a/src/app/home/reciepe/reciepe.page.scss
+++ b/src/app/home/reciepe/reciepe.page.scss
@@ -1,17 +1,31 @@
-//.post_img{
-//  position: fixed;
-//0}
-
-.stories{
-  display: flex !important;
-  overflow: scroll !important;
+.post_img{
+  border-bottom-right-radius: 35px;
+  border-bottom-left-radius: 35px;
 }
 
-.stories .img-box{
-  margin-left: 8px;
-  margin-right: 12px;
-  background-size: contain;
-  border-radius: 50%;
-  padding: 2px;
+.block-description{
+  font-family: 'EB Garamond', serif;
+  margin-left: 5%;
+  margin-right: 5%;
+}
+
+.command-restaurant{
   height: 60px;
+  width: 80%;
+  margin: 0 auto;
+  background: #FF6859;
+  font-family: 'EB Garamond', serif;
+  border-radius: 27px;
+  color: white;
+  padding-top: 10px;
+  font-size: 25px;
+  text-align: center;
+}
+
+.ingredient{
+  border: 5px solid #FF6859;
+  height: 118px;
+  border-radius: 100px;
+  width: 118px;
+  object-fit: contain;
 }
