--- a/src/app/home/tv_shows/choose-show/choose-show.page.html
+++ b/src/app/home/tv_shows/choose-show/choose-show.page.html
@@ -7,7 +7,7 @@
             <img class="img-show" src="{{ show.image }}" alt="{{ show.name }}">
         </div>
         <div class="ion-text-center title-show">
-            <p class="name-show"><b>{{ show.name }}</b></p>
+            <p class="name-show">{{ show.name }}</p>
         </div>
 
     </div>
