--- a/src/app/profil/register/sign_in/sign_in.page.html
+++ b/src/app/profil/register/sign_in/sign_in.page.html
@@ -3,7 +3,7 @@
   <div class="padding">
 
     <div class="logo">
-      <ion-icon name="sunny" color="light"></ion-icon>
+      <img src="assets/ic-log.png" class="img-title">
     </div>
 
     <form [formGroup]="formContact" novalidate (ngSubmit)="register()">
