Front : design des formulaires

--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -6,9 +6,9 @@
       <ion-icon name="home"></ion-icon>
     </ion-tab-button>
 
-    <ion-tab-button tab="agora">
-      <ion-icon name="add"></ion-icon>
-    </ion-tab-button>
+<!--    <ion-tab-button tab="agora">-->
+<!--      <ion-icon name="add"></ion-icon>-->
+<!--    </ion-tab-button>-->
 
     <ion-tab-button tab="sign_in">
       <ion-icon name="person"></ion-icon>
