--- a/src/app/profil/register/connexion/connexion.page.scss
+++ b/src/app/profil/register/connexion/connexion.page.scss
@@ -1,6 +1,20 @@
 ion-content{
-  --ion-background-color: -webkit-linear-gradient(to bottom, #fdc830, #f37335); /* Chrome 10-25, Safari 5.1-6 */
-  --ion-background-color: linear-gradient(to bottom, #fdc830, #f37335); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  --ion-background-color: whitesmoke;
+}
+
+.img-title{
+  width: 55%;
+  margin-left: 25%;
+}
+
+.form{
+  border: 2px solid #FF6859;
+  background-color: white;
+  padding: 5px;
+  border-radius: 35px;
+  margin-bottom: 5%;
+  width: 85%;
+  margin-left: 8%
 }
 
 ion-item{
@@ -27,4 +41,22 @@ ion-item{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) ;
+}
+
+.connexion-btn {
+  width: 85%;
+  margin: 0 auto;
+  height: 65px;
+  background-color: #FF6859;
+  boder-radius: 68px;
+  border-radius: 35px;
+  color: white;
+  text-decoration: none;
+  border: 1px solid #FF6859;
+}
+
+.text-connexion{
+  text-transform: capitalize;
+  font-size: 25px;
+  font-family: 'EB Garamond', serif;
 }
