--- a/src/app/profil/account/account.page.html
+++ b/src/app/profil/account/account.page.html
@@ -1,28 +1,16 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>profile</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
 
-  <ion-item no-lines>
-    <ion-avatar slot="start">
-      <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y">
-    </ion-avatar>
-    <ion-label>Votre nom</ion-label>
+  <ion-item lines="none" class="name_user">
+      <img src="assets/ic-log.png" class="img-account">
   </ion-item>
 
-  <ion-card>
-    <h4 style="color: orange">Votre compte</h4>
-    <div style="display: flex;align-items: center;justify-content: space-between;width: 25%;margin-left: 5%;">
-      <ion-icon name="person-outline" style="color: orange"></ion-icon>
-      <p>Mon profil</p>
-    </div>
-    <div style="display: flex;align-items: center;justify-content: space-between;width: 30%;margin-left: 5%;">
-      <ion-icon name="receipt-outline" style="color: orange"></ion-icon>
-      <p>Mes recettes</p>
-    </div>
+  <div class="ion-text-center text-account">
+    <h2>Salut User !</h2>
+    <p>Retrouvez ici, toutes vos recettes !</p>
+  </div>
+
+  <ion-card class="item-profile">
+    {{ user.reciepes }}
   </ion-card>
 
 
