MAJ du nom du formulaire d'authentification + appel du service user pour envoyer l'email et le mot de passe à l'API

--- a/src/app/profil/register/connexion/connexion.page.html
+++ b/src/app/profil/register/connexion/connexion.page.html
@@ -7,7 +7,7 @@
     </div>
 
     <div *ngIf="!connected">
-      <form [formGroup]="formContact" novalidate (ngSubmit)="register()">
+      <form [formGroup]="loginForm" novalidate (ngSubmit)="login()">
         <ion-list>
           <!--------------------------------------  EMAIL ------------------------------------>
           <ion-item class="form" lines="none">
@@ -50,7 +50,7 @@
 
           <!--------------------------------------  MOT DE PASSE ------------------------------------>
 
-          <ion-button shape="round" expand="block" type="submit" class="connexion-btn " color="red" (click)="login()">
+          <ion-button shape="round" expand="block" type="submit" class="connexion-btn " color="red">
             <p class="text-connexion">
               Connexion
             </p>
