Changement de wordings

--- a/src/app/home/candidates/candidate/candidate.component.html
+++ b/src/app/home/candidates/candidate/candidate.component.html
@@ -25,7 +25,7 @@
         <div></div>
         <ion-icon name="heart" class="heart-icon"></ion-icon>
       </div>
-      <p class="insta-text"><b>{{ reciepe.titre }} : </b>
+      <p class="insta-text"><b>{{ reciepe.title }} : </b>
         {{ reciepe.description }}
       </p>
     </div>
