--- a/src/app/home/tv_shows/choose-show/choose-show.page.html
+++ b/src/app/home/tv_shows/choose-show/choose-show.page.html
@@ -1,5 +1,5 @@
 <ion-content>
-    <h2 class="title-choose-show">Choisissez votre <br>émission</h2>
+    <h2 class="title-choose-show">Choisi ton émission</h2>
     <hr class="hr">
     <div *ngFor="let show of shows" (click)="openShowById(show)">
 
