--- a/src/app/welcome_page/welcome.page.html
+++ b/src/app/welcome_page/welcome.page.html
@@ -18,7 +18,7 @@
 
     <a>
         <div expand="block" [routerLink]="['/home/shows']" class="button-home" >
-            <button class="text-button ion-padding-top">Choisissez votre émission</button>
+            <button class="text-button ion-padding-top">Choisi ton émission</button>
         </div>
     </a>
 
