--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -14,7 +14,7 @@
         </div>
 
         <div class="block-description">
-            <h2>{{ reciepe.titre }}</h2>
+            <h2>{{ reciepe.title }}</h2>
             <p>{{ reciepe.description }}</p>
         </div>
 
