--- a/src/app/home/reciepe/reciepe.page.scss
+++ b/src/app/home/reciepe/reciepe.page.scss
@@ -38,7 +38,7 @@
 
 .command-restaurant{
   height: 57px;
-  width: 30%;
+  width: 35%;
   font-family: 'EB Garamond', serif;
   border-radius: 30px;
   color: #444;
@@ -56,7 +56,7 @@
 .button-cook{
   display: flex;
   margin-top: 5%;
-  justify-content: space-between;
+  justify-content: space-around;
   background: whitesmoke;
   padding-left: 5%;
   padding-right: 5%;
