Bputons qui permet d'accéder aux restaurants partenaires

--- a/src/app/home/reciepe/reciepe.page.html
+++ b/src/app/home/reciepe/reciepe.page.html
@@ -47,8 +47,7 @@
         </div>
 
         <div class="button-cook">
-            <p class="command-restaurant btn-1" (click)="displayPlate()">Cuisiner</p>
-            <p class="command-restaurant btn-2" (click)="displayPlate()">Réserver</p>
+            <p class="command-restaurant btn-2" (click)="orderRestaurant()">Réserver</p>
             <p class="command-restaurant btn-3" (click)="displayPlate()">Commander</p>
         </div>
 
